# xstate-machine

./: .checkignore  .gitignore  CHANGELOG.rst  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
tests/: settings.py
tests/testapp/: models.py
tests/testapp/tests/: test_access_deferred_fsm_field.py  test_custom_data.py  test_exception_transitions.py  test_lock_mixin.py  test_mixin_support.py  test_model_create_with_generic.py  test_multi_resultstate.py  test_multidecorators.py  test_object_permissions.py  test_permissions.py  test_state_transitions.py  test_string_field_parameter.py  test_transition_all_except_target.py
xstate_machine/: __init__.py
xstate_machine/management/commands/: __init__.py  graph_transitions.py
xstate_machine/tests/: test_abstract_inheritance.py  test_basic_transitions.py  test_conditions.py  test_integer_field.py  test_key_field.py  test_protected_field.py  test_protected_fields.py  test_proxy_inheritance.py
