[tool.poetry]
name = "xstate-machine"
version = "3.1.0"
description = "Django friendly finite state machine support."
authors = ["Nicolas Quiroz <nicolasquirozpa@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.4"

[tool.poetry.group.dev.dependencies]
tox = "^4.14.2"
ruff = "^0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
