[tool.poetry]
name = "xstate-machine"
version = "3.1.2"
description = "Django friendly finite state machine support."
authors = ["Nicolas Quiroz <nicolasquirozpa@gmail.com>"]
repository = "https://github.com/xpendit/xstate-machine"
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "Environment :: Web Environment",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Framework :: Django",
        "Framework :: Django :: 1.6",
        "Framework :: Django :: 1.8",
        "Framework :: Django :: 1.9",
        "Framework :: Django :: 1.10",
        "Framework :: Django :: 1.11",
        "Framework :: Django :: 2.0",
        "Framework :: Django :: 2.1",
        "Framework :: Django :: 2.2",
        "Framework :: Django :: 3.1",
        "Framework :: Django :: 3.2",
        "Framework :: Django :: 4.0",
        "Framework :: Django :: 4.1",
        "Framework :: Django :: 5.0",
        "Programming Language :: Python",
        "Programming Language :: Python :: 2.6",
        "Programming Language :: Python :: 2.7",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.4",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Framework :: Django",
        "Topic :: Software Development :: Libraries :: Python Modules",
    ]
license = "MIT"
readme = "README.md"
packages = [
    { include = "xstate_machine" },
    ]
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
graphviz = "^0.20.3"
django = ">=4.0.0"

[tool.poetry.group.dev.dependencies]
tox = "^4.14.2"
ruff = "^0.3.5"
django-guardian = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
